tests/transpiler/x/cpp/pure_global_fold.cpp
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:20:15 GMT+7
#include <iostream>
#include <string>
#include <sstream>
#include <iomanip>


int inc(int x) {
    return (x + k);
}

auto k = 2;

int main() {
    std::cout << std::boolalpha << inc(3) << std::endl;
    return 0;
}
